# lania-agent-runtime

./: .coverage  .flake8  .gitignore  README.md  grill-self-review.md  main.py  overview.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
demos/: __init__.py  demo_multi_turn.py  demo_quickstart.py  demo_single_turn.py
docs/: agent-runtime-design.md  design-vs-code-diff.md  llm-executor-design.md  memory-system-design.md  tool-mcp-skill-design.md
docs/design/: agent-runtime-design.md  context-management-redesign.md  llm-executor-design.md  loop-strategy-design.md  memory-system-design.md  observer-and-primitive-redesign.md  orchestration-components-design.md  (+2 more)
tests/: __init__.py  mcp_mock_server.py  test_branch_coverage.py  test_builder.py  test_context.py  test_context_budget.py  test_context_compressor.py  test_context_manager.py  test_context_payload.py  test_context_selector.py  test_coverage_edge.py  test_executor.py  test_executor_edge_cases.py  test_executor_retry.py  test_executor_stream.py  test_hook_registry.py  test_hooks.py  test_hooks_approval.py  test_llm_executor.py  test_loops.py  test_memory.py  test_memory_edge_cases.py  test_memory_management.py  test_memory_new_features.py  test_memory_persistence.py  test_memory_service.py  test_memory_stores.py  test_models.py  test_pipeline.py  test_pipeline_coverage.py  test_plugin.py  test_runtime.py  test_runtime_advanced.py  test_runtime_config.py  test_runtime_context.py  test_runtime_edge_cases.py  test_serializer.py  test_step_runner_coverage.py  test_steps.py  test_tools.py  (+4 more)
(+144 files in other folders)
