[project]
name = "lania-agent-runtime"
version = "0.1.0"
description = "Lania Agent Runtime - Agent runtime with LLM executor and memory system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "fastapi>=0.139.0",
    "httpx-sse>=0.4.3",
    "ruff>=0.15.21",
    "uvicorn>=0.51.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "ANN"]
ignore = ["ANN001", "ANN002", "ANN003", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201", "ANN202", "ANN204"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 96
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runtime"]
